update agent activities

--- a/main-darkback/Activities_Agent.html
+++ b/main-darkback/Activities_Agent.html
@@ -53,8 +53,8 @@
                 <!-- Logo Test -->
                 <a href="index.html" class="logo">
                     <div class="logo-lg">
-                        <span class="light-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
-                        <span class="dark-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
+                        <span class="light-logo"><img src="../images/bravo.png" alt="logo" width="110"></span>
+                        <span class="dark-logo"><img src="../images/bravo.png" alt="logo" width="110"></span>
                     </div>
                 </a>
             </div>
@@ -91,59 +91,45 @@
                         <div class="col-md-6">
                             <div class="table-container">
                                 <h3 class="section-title">Call</h3>
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Nama Agent</th>
-                                            <th>Extension</th>
-                                            <th>Status</th>
-                                            <th>Duration</th>
-                                        </tr>
-                                    </thead>
-                                </table>
-                                <div id="containerxx">
-                                    <div id="div1">
-                                        <table class="table">
-                                            <!-- Content will be injected here dynamically -->
-                                        </table>
-                                    </div>
-                                    <div id="div2">
-                                        <table class="table">
-                                            <!-- Duplicate content for scrolling -->
-                                        </table>
-                                    </div>
+                                <div class="scrollable-table">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Nama Agent</th>
+                                                <th>Extension</th>
+                                                <th>Status</th>
+                                                <th>Duration</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="table-body">
+                                            <!-- Content will be injected dynamically -->
+                                        </tbody>
+                                    </table>
                                 </div>
-                            </div>
+                            </div>                            
                         </div>
                         
                         <!-- Multichat -->
                         <div class="col-md-6">
                             <div class="table-container">
                                 <h3 class="section-title">Multichat</h3>
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Nama Agent</th>
-                                            <th>Status</th>
-                                            <th>Now Handle</th>
-                                            <th>Channel</th>
-                                            <th>Longest</th>
-                                        </tr>
-                                    </thead>
-                                </table>
-                                <div id="containerxx">
-                                    <div id="div1-multichat">
-                                        <table class="table">
-                                            <!-- Content will be injected here dynamically -->
-                                        </table>
-                                    </div>
-                                    <div id="div2-multichat">
-                                        <table class="table">
-                                            <!-- Duplicate content for scrolling -->
-                                        </table>
-                                    </div>
+                                <div class="scrollable-table">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Nama Agent</th>
+                                                <th>Status</th>
+                                                <th>Now Handle</th>
+                                                <th>Channel</th>
+                                                <th>Longest</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="multichat-body">
+                                            <!-- Content will be injected dynamically -->
+                                        </tbody>
+                                    </table>
                                 </div>
-                            </div>
+                            </div>                                                
                         </div>
                     </div>
 
@@ -152,60 +138,45 @@
                         <div class="col-md-6">
                             <div class="table-container">
                                 <h3 class="section-title">Email</h3>
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Nama Agent</th>
-                                            <th>Role</th>
-                                            <th>Status</th>
-                                            <th>Now Handle</th>
-                                            <th>Longest</th>
-                                        </tr>
-                                    </thead>
-                                </table>
-                                <div id="containerxx">
-                                    <div id="div1-email">
-                                        <table class="table">
-                                            <!-- Content will be injected here dynamically -->
-                                        </table>
-                                    </div>
-                                    <div id="div2-email">
-                                        <table class="table">
-                                            <!-- Duplicate content for scrolling -->
-                                        </table>
-                                    </div>
+                                <div class="scrollable-table">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Nama Agent</th>
+                                                <th>Role</th>
+                                                <th>Status</th>
+                                                <th>Now Handle</th>
+                                                <th>Longest</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="table-body-email">
+                                            <!-- Content will be injected dynamically -->
+                                        </tbody>
+                                    </table>
                                 </div>
-                            </div>                
+                            </div>                                                
                         </div>
                         <!-- Social Media -->
                         <div class="col-md-6">
                             <div class="table-container">
                                 <h3 class="section-title">Social Media</h3>
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th style="min-width: 200px; max-width: 200px;">Nama Agent</th>
-                                            <th>Status</th>
-                                            <th>Now Handle</th>
-                                            <th>Channel</th>
-                                            <th>Longest</th>
-                                        </tr>
-                                    </thead>
-                                </table>
-                                <div id="containerxx">
-                                    <div id="div1-sosmed">
-                                        <table class="table">
-                                            <!-- Content will be injected here dynamically -->
-                                        </table>
-                                    </div>
-                                    <div id="div2-sosmed">
-                                        <table class="table">
-                                            <!-- Duplicate content for scrolling -->
-                                        </table>
-                                    </div>
+                                <div class="scrollable-table">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Nama Agent</th>
+                                                <th>Status</th>
+                                                <th>Now Handle</th>
+                                                <th>Channel</th>
+                                                <th>Longest</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="sosmed-body">
+                                            <!-- Content will be injected dynamically -->
+                                        </tbody>
+                                    </table>
                                 </div>
-                            </div>
-                            
+                            </div>                            
                         </div>
 
                     </div>
@@ -216,31 +187,6 @@
         <!-- /.content-wrapper -->
     </div>
     <!-- ./wrapper -->
-
-    <!-- Vendor JS -->
-    <script src="js/vendors.min.js"></script>
-    <script src="js/pages/chat-popup.js"></script>
-    <script src="../assets/vendor_components/chartist-js-develop/chartist.js"></script>
-    <script src="../assets/vendor_components/chart.js-master/Chart.min.js"></script>
-    <script src="../assets/vendor_components/c3/d3.min.js"></script>
-    <script src="../assets/vendor_components/c3/c3.min.js"></script>
-    <script src="../assets/vendor_components/echarts/dist/echarts-en.min.js"></script>
-    <script src="../assets/vendor_components/raphael/raphael.min.js"></script>
-    <script src="../assets/vendor_components/morris.js/morris.min.js"></script>
-
-    <!-- Chat Bot Admin App -->
-    <!--<script src="js/pages/gauge.js"></script>-->
-
-    <script src="js/template.js"></script>
-    <script src="js/demo.js"></script>
-    <script src="js/pages/widget-chartist.js"></script>
-
-    <script src="js/pages/widget-charts2.js"></script>
-    <script src="js/pages/c3-data.js"></script>
-    <script src="js/pages/c3-bar-pie.js"></script>
-
-    <script src="js/pages/echart-pie-doghnut.js"></script>
-    <script src="js/pages/widget-morris-charts.js"></script>
 
 </body>
 
