--- a/main-darkback/Agent_Performance.html
+++ b/main-darkback/Agent_Performance.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="Agent_Performance.css">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <script src="Chart.bundle.js"></script>
     <script src="chartjs-gauge.js"></script>
@@ -107,21 +110,35 @@
                 </div>
                 <div class="navbar-custom-menu r-side">
                     <ul class="nav navbar-nav">
-                        <li class="btn-group d-md-inline-flex d-none">
+                        <!-- Hamburger Menu -->
+                        <li class="d-flex align-items-center" style="margin-right: 10px;">
+                            <div class="dropdown">
+                                <a class="hamburger-icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fa fa-bars" style="font-size: 24px; color: goldenrod;"></i>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right" style="margin-right: 10px;">
+                                    <a class="dropdown-item" href="http://10.216.206.10/wallboard/main-dark/WallboardServices.html" target="_blank">Wallboard Services</a>
+                                    <a class="dropdown-item" href="http://10.216.206.10/wallboard/main-dark/Site_Performance.html" target="_blank">Site Performance</a>
+                                    <a class="dropdown-item" href="http://10.216.206.10/wallboard/main-dark/Activities_Agent.html" target="_blank">Activities Agent</a>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- Date-Time -->
+                        <li class="d-flex align-items-center">
                             <div class="app-menu">
-                                <a class="date-time-text" id="dateTime" style="color: goldenrod;"></a>
+                                <a class="date-time-text" id="dateTime" style="color: goldenrod;">Jumat | 20 Desember 2024 | 14:03:22</a>
                             </div>
                         </li>
                     </ul>
                 </div>
             </nav>
         </header>
-
+        
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <div class="container-full">
                 <!-- Content Header (Page header) -->
-                <h2 class="text-center mb-4">
+                <h2 class="text-center">
                     Agent Performances
                 </h2>
 
