fix ui wb Agent_Performance

--- a/main-darkback/Agent_Performance.html
+++ b/main-darkback/Agent_Performance.html
@@ -143,8 +143,8 @@
                                             <tr>
                                                 <th>Nama Agent</th>
                                                 <th style="width:30%">Acd Calls</th>
-                                                <th>Avg Resp Time</th>
-                                                <th>Avg Handle Time</th>
+                                                <th>Avg Ring Time</th>
+                                                <th>Avg Talk Time</th>
                                             </tr>
                                         </thead>
                                         <tbody id="table-body">
@@ -211,7 +211,8 @@
                                         <thead>
                                             <tr>
                                                 <th>Nama Agent</th>
-                                                <th>Chats</th>
+                                                <th>Meta DM</th>
+                                                <th>X DM</th>
                                                 <th>Avg Resp Time</th>
                                                 <th>Avg Conv Time</th>
                                             </tr>
