fix ui wb CallPerformances

--- a/main-darkback/CallPerformances.html
+++ b/main-darkback/CallPerformances.html
@@ -198,7 +198,7 @@
 										</div>
 								
 										<div class="chart-container">
-											<iframe src="gauge.html" id="chart-radial-bar" style="width: 600px; height: 200px; border: none;"></iframe>
+											<iframe src="gauge.html" id="chart-radial-bar" style="width: 600px; height: 216px; border: none;"></iframe>
 										</div>										
 										
 										<center style="padding-top: 30px;">
@@ -224,7 +224,7 @@
 												<span class="h3 text-light">Last 5 Month</span><br>
 												<span class="h3 text-light">% Ans. Calls</span>
 											</div>
-											<div class="pull-right d-none d-sm-inline-block">
+											<div class="pull-right d-none d-sm-inline-block mt-2">
 												<span class="badge2 badge-biru" id="fiveMonthTotal5">0</span>
 												<span class="badge2 badge-merah" id="fiveMonthTotal4">0</span>
 												<span class="badge2 badge-hijau" id="fiveMonthTotal3">0</span>
